# philo

./: CMakeLists.txt
include/: Philo.h  Philo_bonus.h  philo.h  philo_bonus.h
philo/: Makefile
philo/includ/: philo.h
philo/src/: init_mutex.c  init_philo.c  libft_func.c  main.c  simulation.c  write_func.c
philo_bonus/: Makefile
philo_bonus/includ/: philo_bonus.h
philo_bonus/include/: philo_bonus.h
philo_bonus/src/: init_philo.c  init_sem.c  libft_func.c  main.c  philo_process.c  simulation.c  write_func.c
src/bonus/: ft_atoi.c  init_philo.c  init_sem.c  init_sem_forks.c  libft_func.c  main.c  simulation.c  time.c  write_func.c
src/main/: ft_atoi.c  init_forks.c  init_mutex.c  init_mutex_forks.c  init_philo.c  libft_func.c  main.c  set_forks_to_philo.c  simulation.c  time.c  write_func.c
